# selfDestruction

./: README.md
C Version/linuxClient/: main.c
C Version/linuxServer/: CMakeLists.txt
CPP Version/linuxClient/: CMakeLists.txt  main.cpp  socketConsume.cpp  socketConsume.h
CPP Version/linuxServer/: main.cpp  socketService.cpp  socketService.h
Version 0.0.1/C Version/linuxClient/: main.c
Version 0.0.1/C Version/linuxServer/: main.c
Version 0.0.1/C Version/winServer/: CMakeLists.txt
Version 0.0.1/CPP Version/linuxClient/: CMakeLists.txt  executioner.h  mainClient.h  socketConsume.h
Version 0.0.1/CPP Version/linuxServer/: main.cpp  socketService.h
Version 0.0.2/linuxClient/: CMakeLists.txt  executioner.cpp  executioner.h  main.cpp  mainClient.cpp  mainClient.h  socketCombined.h  socketConsume.cpp
Version 0.0.2/linuxClient/socketObsolete/: socketConsume.cpp  socketConsume.h
Version 0.0.2/linuxServer/: CMakeLists.txt  main.cpp  mainServer.cpp  mainServer.h  socketCombined.cpp  socketCombined.h  socketService.cpp
Version 0.0.2/linuxServer/socketObsolete/: socketService.cpp  socketService.h
fileFiller/: CMakeLists.txt  main.cpp
linuxClient/: CMakeLists.txt  main.c
winServer/: main.c
